Replaced cloudscribe.Web.Navigation package

--- a/League/Views/Contact/Index.cshtml
+++ b/League/Views/Contact/Index.cshtml
@@ -2,7 +2,7 @@
 @using League.Helpers
 @using Microsoft.AspNetCore.Mvc.Localization
 @using TournamentManager.MultiTenancy
-@model League.Models.HomeViewModels.ContactViewModel
+@model League.Models.ContactViewModels.ContactViewModel
 @inject ITenantContext TenantContext
 @inject IViewLocalizer Localizer
 @{
