--- a/League/Views/Home/AboutLeague.cshtml
+++ b/League/Views/Home/AboutLeague.cshtml
@@ -51,7 +51,7 @@
     </div>
     <div class="row mb-4">
         <article class="col-8">
-            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.HomeGeneralContact" class="link font-weight-bolder">Contact us</a> to run a league on this platform.</div>
+            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.GeneralContact" class="link font-weight-bolder">Contact us</a> to run a league on this platform.</div>
         </article>
     </div>
     <div class="row">
