--- a/League/Views/Home/AboutLeague.de.cshtml
+++ b/League/Views/Home/AboutLeague.de.cshtml
@@ -53,7 +53,7 @@
     </div>
     <div class="row mb-4">
         <article class="col-8">
-            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.HomeGeneralContact" class="link font-weight-bolder">Kontaktiere uns</a> um eine Liga mit dieser Plattform zu organisieren.</div>
+            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.GeneralContact" class="link font-weight-bolder">Kontaktiere uns</a> um eine Liga mit dieser Plattform zu organisieren.</div>
         </article>
     </div>
     <div class="row">
