--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -1,12 +1,8 @@
 ﻿@using League.Helpers
 @using League.Routing
 @using Microsoft.AspNetCore.Mvc.Localization
-@using Microsoft.Extensions.Localization
 @using TournamentManager.MultiTenancy
-@using League.Controllers
-@using League.Components
 @inject ITenantContext TenantContext
-@inject IStringLocalizer<MainNavigation> NaviLocalizer;
 @inject IViewLocalizer Localizer
 <!DOCTYPE html>
 <html lang="@System.Threading.Thread.CurrentThread.CurrentUICulture.TwoLetterISOLanguageName">
@@ -35,10 +31,10 @@
     <header class="rounded site">
         <div class="d-flex flex-column flex-md-row justify-content-between h-100">
             <div class="my-auto order-2 order-md-1">
-                <h1 class="h4 header-organization">@(TenantContext.IsDefault ? NaviLocalizer["Volleyball League"] : TenantContext.OrganizationContext.Name)</h1>
+                <h1 class="h4 header-organization">@(TenantContext.IsDefault ? Localizer["Volleyball League"].Value : TenantContext.OrganizationContext.Name)</h1>
             </div>
             <div class="my-auto order-1 order-md-2 text-md-right header-logo">
-                <a class="d-block" href="@Url.Action(nameof(League.Controllers.Home.Welcome), nameof(League.Controllers.Home))" style="text-decoration: none">
+                <a class="d-block" href="/" style="text-decoration: none">
                     <span class="d-inline-block part1">volleyball-liga</span>
                     <span class="d-inline-block part2">.de</span>
                     <img class="d-none d-md-inline-block" src="@Url.Content("~/images/logo-volleyball-league.svg")" alt="Logo" height="50"/>
@@ -72,9 +68,9 @@
                         <a asp-route="@RouteNames.TenantContact" asp-route-organization="@TenantContext.SiteContext.UrlSegmentValue" class="d-inline-block mr-4">@Localizer["Contact"]</a>
                     }
                 }
-                <a asp-action="@nameof(Home.LegalDisclosure)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Legal Disclosure"]</a>
-                <a asp-action="@nameof(Home.Privacy)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Privacy"]</a>
-                <a asp-action="@nameof(Home.PictureCredits)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Picture Credits"]</a>
+                @*<a asp-action="@nameof(Home.LegalDisclosure)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Legal Disclosure"]</a>
+        <a asp-action="@nameof(Home.Privacy)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Privacy"]</a>
+        <a asp-action="@nameof(Home.PictureCredits)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Picture Credits"]</a>*@
             </div>
         </div>
     </footer>
