--- a/LeagueDemo/Views/Home/Welcome.cshtml
+++ b/LeagueDemo/Views/Home/Welcome.cshtml
@@ -1,5 +1,4 @@
-﻿@using League.Controllers
-@using League.Helpers
+﻿@using League.Helpers
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 @{
@@ -48,7 +47,7 @@
             <li><span class="fa-li"><i class="fas fa-question text-primary"></i></span>@Localizer["Manual work takes too much from your leisure time?"]</li>
         </ul>
         <h4 class="h5">
-            <a asp-action="@nameof(Home.AboutLeague)" asp-controller="@nameof(Home)" class="text-primary font-weight-bolder" ><i class="fa fa-check-circle text-primary"></i> @Localizer["Here is the solution to help you out!"]</a>
+            <a asp-action="@nameof(LeagueDemo.Controllers.Home.AboutLeague)" asp-controller="@nameof(LeagueDemo.Controllers.Home)" class="text-primary font-weight-bolder" ><i class="fa fa-check-circle text-primary"></i> @Localizer["Here is the solution to help you out!"]</a>
         </h4>
     </div>
 </div>
