--- a/LeagueDemo/Views/Shared/_Layout.cshtml
+++ b/LeagueDemo/Views/Shared/_Layout.cshtml
@@ -1,12 +1,9 @@
 ﻿@using League.Helpers
 @using League.Routing
 @using Microsoft.AspNetCore.Mvc.Localization
-@using Microsoft.Extensions.Localization
 @using TournamentManager.MultiTenancy
-@using League.Controllers
-@using League.Components
+@using LeagueDemo.Controllers
 @inject ITenantContext TenantContext
-@inject IStringLocalizer<MainNavigation> NaviLocalizer;
 @inject IViewLocalizer Localizer
 <!DOCTYPE html>
 <html lang="@System.Threading.Thread.CurrentThread.CurrentUICulture.TwoLetterISOLanguageName">
@@ -35,10 +32,10 @@
     <header class="rounded site">
         <div class="d-flex flex-column flex-md-row justify-content-between h-100">
             <div class="my-auto order-2 order-md-1">
-                <h1 class="h4 header-organization">@(TenantContext.IsDefault ? NaviLocalizer["Volleyball League"] : TenantContext.OrganizationContext.Name)</h1>
+                <h1 class="h4 header-organization">@(TenantContext.OrganizationContext.Name)</h1>
             </div>
             <div class="my-auto order-1 order-md-2 text-md-right header-logo">
-                <a class="d-block" href="@Url.Action(nameof(League.Controllers.Home.Welcome), nameof(League.Controllers.Home))" style="text-decoration: none">
+                <a class="d-block" href="@Url.Action(nameof(Home.Welcome), nameof(Home))" style="text-decoration: none">
                     <span class="d-inline-block part1">volleyball league</span>
                     <span class="d-inline-block part2">demo</span>
                     <img class="d-none d-md-inline-block" src="@Url.Content("~/images/logo-volleyball-league.svg")" alt="Logo" height="50"/>
@@ -52,7 +49,6 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navbar-header" class="collapse navbar-collapse">
-            @* <a class="navbar-brand" href="#">axuno</a>*@
             @await (Component.InvokeAsync<League.Components.MainNavigation>())
         </div>
     </nav>
