--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
-    <title>@ViewData.Title()</title>
+    <title>@ViewData["Title"]</title>
     @if (ViewData.Description() != null)
     {
     <meta name="description" content="@ViewData.Description()" />
