--- a/League/Views/Match/Fixtures.cshtml
+++ b/League/Views/Match/Fixtures.cshtml
@@ -74,7 +74,7 @@
                     <i class="fas fa-1x fa-times-circle mr-2"></i>
                     <span class="badge badge-dark"></span>
                 </div>
-                <div class="rounded table-responsive">
+                <div class="rounded table-responsive" style="min-height: 13rem">@* min height assures dropdowns are not clipped *@
                     <table class="table table-sm table-light table-bordered table">
                         <thead class="rounded">
                             <tr>
