Add cookie_flags for Google Analytics
Remove browser warnings like
"Some cookies are misusing the recommended sameSite attribute" with:
gtag('config', [TRACKING_ID], {cookie_flags: 'SameSite=None;Secure'})

--- a/League/Views/Shared/_GoogleAnalyticsScriptsPartial.cshtml
+++ b/League/Views/Shared/_GoogleAnalyticsScriptsPartial.cshtml
@@ -5,13 +5,13 @@
     var googleConfig = new GoogleConfiguration();
     Configuration.Bind("GoogleConfiguration", googleConfig);
 }
-    @*<!-- Global site tag (gtag.js) - Google Analytics -->*@
+@*<!-- Global site tag (gtag.js) - Google Analytics -->*@
 <script async src="https://www.googletagmanager.com/gtag/js?id=@googleConfig.AnalyticsTrackingId"></script>
-    <script type="text/javascript">
-        //<![CDATA[
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', '@googleConfig.AnalyticsTrackingId');
-        //]]>
-    </script>
+<script type="text/javascript">
+    //<![CDATA[
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '@googleConfig.AnalyticsTrackingId', {cookie_flags: 'SameSite=None;Secure'});
+    //]]>
+</script>
