Enable NRT for TournamentManager.DAL.*.csproj and TournamentManager.Tests

--- a/League/Views/Match/Results.cshtml
+++ b/League/Views/Match/Results.cshtml
@@ -187,7 +187,7 @@
         .changed-result { font-weight: bold; border-left: solid 8px lightgray !important}
         .team-filter { cursor: pointer;}
         .filter-link { /* javascript only */ }
-        .leg-change { padding: 0, margin:0}
+        .leg-change { padding: 0; margin:0}
         .result { text-align: center; width:@(resultColWidth)%;}
         .context-menu { text-align: center; width:@(contextMenuColWidth)%;}
         .date { width: @(dateColWidth)%;}
