Fix: CSS03 Unexpected character sequence in property value.
C# variables embedded in <style> block cause CSS03 warning

--- a/League/Views/Match/Fixtures.cshtml
+++ b/League/Views/Match/Fixtures.cshtml
@@ -158,6 +158,11 @@
         var contextMenuColWidth = 5;
         var dateColWidth = 15;
         var opponentColWidth = 100 - venueColWidth - dateColWidth - contextMenuColWidth;
+        // CSS classes as string removes "CSS03 Unexpected character sequence in property value."
+        var venueCssClass = $".venue {{ width: {venueColWidth}%; }}";
+        var contextMenuCssClass = $".context-menu {{ text-align: center; width: {contextMenuColWidth}%;}}";
+        var dateCssClass = $".date {{ width: {dateColWidth}%;}}";
+        var opponentsCssClass = $".opponents {{width: {opponentColWidth}%);}}";
     }
     <style type="text/css">
         #round-tabs .nav-link:not(.active) {border:solid 1px lightgray;}
@@ -167,11 +172,11 @@
         .team-filter { cursor: pointer;}
         .filter-link { /* javascript only */ }
         .leg-change { padding: 0; margin:0}
-        .venue { width:@(venueColWidth)%}
+        @(venueCssClass)
         .venue > div {max-width: calc(45 * 1vw)}
-        .context-menu { text-align: center; width:@(contextMenuColWidth)%;}
-        .date { width: @(dateColWidth)%;}
-        .opponents {width:@(opponentColWidth)%)}
+        @(contextMenuCssClass)
+        @(dateCssClass)
+        @(opponentsCssClass)
         .opponents > div {max-width: calc(45 * 1vw); padding-right: .5rem }
         .tooltip { white-space:pre-wrap; } @* will recognize \n for new lines *@
     </style>
